# pyfigure98

./: .gitignore  Figure.py  Graph.py  Graphs.py  MANIFEST.in  README.md  __init__.py  dependencies.py  example.py  pyproject.toml  setup.py  test.json  to_do_list.txt
.github/workflows/: main.yml
Figure/: __init__.py  _place_holder.py  _set_figure.py  _template_handling.py
Figure/Graph/: __init__.py  _axes_methods.py  _graph_methods.py  _plot_methods.py
old/: Figure_old.py
pyfigure98/: LICENSE.TXT  __init__.py
pyfigure98/Figure/Graph/: __init__.py  _axes_methods.py
pyfigure98/Figure/Templates/: default.txt
src/pyfigure98/: __init__.py
src/pyfigure98.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyfigure98/Figure/: __init__.py  _place_holder.py  _set_figure.py  _template_handling.py
src/pyfigure98/Figure/Chart/: __init__.py  _axes_methods.py  _chart_methods.py  _place_holder.py  _plot_methods.py
src/pyfigure98/Figure/Graph/: __init__.py  _axes_methods.py  _graph_methods.py  _place_holder.py  _plot_methods.py
src/pyfigure98/Figure/Templates/: default.json
